<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.oddkeys.cointoss.MainActivity">



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                style="@style/scores"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/streak"
                android:textSize="14sp" />
            <TextView
                style="@style/valOfScores"
                android:id="@+id/streak"
                android:textSize="14sp"
                android:text="-"
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:padding="8dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

           <Button
               android:onClick="cointoss"
               android:textAllCaps="true"
               android:id="@+id/head"
               android:textSize="14sp"
               android:textAlignment="center"
               android:padding="8dp"
               android:text="@string/head"
               android:layout_width="150dp"
               android:layout_height="72dp" />
            <TextView
                style="@style/oddkeys"
                android:padding="8dp"
                android:textAlignment="center"
                android:text="@string/or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:onClick="cointoss"
                android:textAllCaps="true"
                android:id="@+id/tails"
                android:textAlignment="center"
                android:padding="8dp"
                android:text="@string/tails"
                android:textSize="14sp"
                android:layout_width="150dp"
                android:layout_height="72dp" />
        </LinearLayout>

        <LinearLayout
            android:padding="8dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/scores"
                android:padding="8dp"
                android:textSize="16sp"
                android:text="@string/currentscore"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                style="@style/valOfScores"
                android:text="0"
                android:id="@+id/currentScore"
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </LinearLayout>
        <LinearLayout

            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                style="@style/scores"
                android:padding="8dp"
                android:textSize="16sp"
                android:text="@string/highscore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                style="@style/valOfScores"
                android:text="0"
                android:padding="8dp"
                android:id="@+id/highScore"
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:text="@string/ouput"
            android:textSize="24sp"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:padding="8dp"
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        </LinearLayout>
</ScrollView>




